Fixing word wrapping issue

--- a/src/main.scss
+++ b/src/main.scss
@@ -118,9 +118,6 @@ body {
 }
 
 .headline-row {
-    display: flex;
-    align-items: 'baseline';
-    flex-flow: column;
     font-size: 16px;
     line-height: 16px;
 }
